--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ header {
   font-weight: 700;
   font-size: 18px;
   line-height: 20px;
-  color: #6070ff;
+  color: #020432;
   text-decoration: none;
   cursor: pointer;
 }
@@ -209,7 +209,7 @@ h1 {
 
 .social-link {
   font-weight: 500;
-  color: #7f8cff;
+  color: #050a39;
   font-size: 16px;
   line-height: 24px;
   text-transform: uppercase;
@@ -870,7 +870,7 @@ button:disabled {
     font-size: 20px;
     line-height: 28px;
     padding: 0 10%;
-    color: #ebebff;
+    color: #080808;
   }
 
   .round {
