--- a/style.css
+++ b/style.css
@@ -116,20 +116,23 @@ li {
 
 header {
   width: 100%;
+  position: fixed;
   height: 48px;
-  top: 44px;
+  top: -1px;
   padding: 5%;
   background-color: var(--main-bg-color);
 }
 
 .navbar {
+  display: flex;
   justify-content: space-between;
-  padding: 0 0.2%;
-
+  padding: 0 3%;
 }
+
 
 .logo {
   display: flex;
+  align-self: flex-end;
   animation: my-move 3s 1 linear 1s;
   width: 76px;
   height: 20px;
@@ -146,13 +149,13 @@ header {
   position: absolute;
   z-index: 3;
   right: 35px;
-  top: 22px;
+  top: 25px;
   cursor: pointer;
   transition: all 0.5s ease-out;
 }
 
 .bar-toggle .btn-line {
-  width: 28px;
+  width: 30px;
   height: 3px;
   margin: 0 0 5px 0;
   background-color: #6070ff;
@@ -179,47 +182,32 @@ header {
   transform: rotate(-45deg) translate(7px, -6px);
 }
 
-.bar-toggle .btn-line:hover {
-  color: #172b4d;
-}
-.menu {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  opacity: 0.9;
-  visibility: hidden;
-  gap: -10rem;
+
+.bar-toggle > i {
+  font-size: 28px;
+  transition: all ease 300ms;
+  cursor: pointer;
 }
 
+.bar-toggle > i:hover {
+  color: #172b4d;
+}
+.menu{
+  display: none;
+
+
+}
 .navbar-links.show {
   visibility: visible;
 }
-
-/* Adding a transition delay to the
-4 items in the navigation menu */
-/* .nav-item:nth-child(1) {
-  transition-delay: 0.1s;
-}
-
-.nav-item:nth-child(2) {
-  transition-delay: 0.2s;
-}
-
-.nav-item:nth-child(3) {
-  transition-delay: 0.3s;
-}
-
-.nav-item:nth-child(4) {
-  transition-delay: 0.4s;
-} */
-.navbar-links {
+/* .navbar-links {
   position: fixed;
   top: 70px;
   width: 100%;
   height: 100vh;
   opacity: 0.9;
   visibility: hidden;
-  background-color: var(--main-bg-color);
+  background-color: var(--black-color);
   border-radius: 10px;
 }
 
@@ -240,7 +228,8 @@ header {
   border-radius: 10px;
   color: var(--gray--light-color);
 
-}
+} */
+
 
 h1 {
   padding-top: 5%;
@@ -417,7 +406,7 @@ h1 {
   width: 168px;
 }
 
-.about>h1 {
+.about > h1 {
   margin-bottom: 0;
 }
 
@@ -425,7 +414,7 @@ h1 {
   padding: 10% 0;
 }
 
-.skill-list>ul {
+.skill-list > ul {
   padding-inline-start: 2%;
 }
 
@@ -440,7 +429,7 @@ h1 {
   align-items: center;
 }
 
-.skills>span>img:hover {
+.skills > span > img:hover {
   color: var();
   background-color: var(--light-text-color);
 }
@@ -492,7 +481,7 @@ hr.line {
   background-color: var(--footer-background);
 }
 
-.content>h1 {
+.content > h1 {
   color: white;
   margin-top: 2em;
 }
@@ -597,7 +586,7 @@ button:disabled {
   color: #5e6c84;
 }
 
-.navbar-links>li>a:hover {
+.navbar-links > li > a:hover {
   animation: glowing 20s linear infinite;
   opacity: 0;
   transition: opacity 9s ease-in-out;
@@ -605,7 +594,7 @@ button:disabled {
   color: var(--button-color);
 }
 
-.social-icon>a>img:hover {
+.social-icon > a > img:hover {
   box-shadow: 1px 2px 4px 1px var(--button-disabled-text-color);
   transform: scale(1);
   background-color: var(--gray--light-color);
@@ -615,7 +604,6 @@ button:disabled {
 /* end */
 
 @media screen and (min-width: 768px) {
-
   /* images */
   .img1 {
     content: url("./images-portfolio-desktop/Snapshoot\ Portfolio.png");
@@ -642,14 +630,13 @@ button:disabled {
   header {
     width: 100%;
     position: fixed;
-    top: -9vh;
+    top: -12vh;
     background: white;
     z-index: 1;
   }
 
   .navbar {
-    margin-top: 30px;
-    display: flex;
+    margin-top: 20px;
   }
 
   .logo {
@@ -659,29 +646,20 @@ button:disabled {
   }
 
   .bar-toggle {
-    display: flex;
-  }
-  .menu{
-    margin-top: -30px;
+    display: none;
   }
 
-   .navbar-links {
+  .menu,
+  .navbar-links {
     display: flex;
-    margin-bottom: 100px;
-    min-width: 5%;
+    min-width: 35%;
     color: #344563;
+    gap: 4em;
   }
-  .navbar-links li a {
-    text-align: center;
-    text-decoration: none;
-    gap: -5rem;
-    font-size: 20px;
-  }
-  .navbar-links ul li a{
-    padding: 10px 25px;
-    display: block;
-  } 
 
+  .navbar-links > li > a {
+    text-decoration: none;
+  }
 
   .small-container {
     margin-top: 9%;
@@ -701,7 +679,7 @@ button:disabled {
     margin-inline: 260px;
   }
 
-  .personal-info>h2 {
+  .personal-info > h2 {
     font-size: 48px;
     line-height: 60px;
     letter-spacing: 0.37px;
@@ -720,7 +698,7 @@ button:disabled {
     margin-inline: 260px;
   }
 
-  .skills>span>img {
+  .skills > span > img {
     position: relative;
     top: 10px;
     left: -80px;
@@ -750,7 +728,7 @@ button:disabled {
     border-radius: 8px;
   }
 
-  .images-tags>a>img {
+  .images-tags > a > img {
     max-width: 100%;
     display: block;
     height: auto;
@@ -898,7 +876,7 @@ button:disabled {
     justify-content: center;
   }
 
-  .personal-info>.paragraph-text {
+  .personal-info > .paragraph-text {
     line-height: 22px;
   }
 
@@ -910,7 +888,7 @@ button:disabled {
     max-width: 58%;
   }
 
-  .skill-list>ul {
+  .skill-list > ul {
     max-width: 100%;
   }
 
@@ -948,7 +926,7 @@ button:disabled {
     background-color: var(--footer-background);
   }
 
-  .content>h1 {
+  .content > h1 {
     font-size: 32px;
     line-height: 52px;
   }
