--- a/style.css
+++ b/style.css
@@ -125,19 +125,21 @@ header {
   padding: 0 3%;
   align-items: center;
 }
-.modal-pop{
+
+.modal-pop {
   position: fixed;
   top: -25%;
   left: 45%;
-  transform: translate(-50%, 50%)scale(0);
+  transform: translate(-50%, 50%) scale(0);
   border-radius: 10px;
+
   /* opacity: 0; */
-  z-index: 10;
+  z-index: 4;
   width: 500px;
   max-width: 80%;
 }
-.card-item-modal{
 
+.card-item-modal {
   display: flex;
   flex-direction: column;
   gap: 12px;
@@ -145,20 +147,22 @@ header {
   padding: 16px;
   border-radius: 16px;
   background-color: var(--main-bg-color);
-
 }
-.modal-pop.active{
-  transform: translate(-50%, 50%)scale(1);
+
+.modal-pop.active {
+  transform: translate(-50%, 50%) scale(1);
   top: -25%;
   left: 45%;
 }
-.modal{
-  display:flex;
+
+.modal {
+  display: flex;
   justify-content: space-between;
   margin-bottom: 2rem;
   padding: 5px 5px;
 }
-.close-x{
+
+.close-x {
   font-size: 2.25rem;
   font-weight: bold;
   background: none;
@@ -167,24 +171,26 @@ header {
   outline: none;
   border: none;
   margin-left: 10rem;
-  
 }
 
-#overlay{
+#overlay {
   position: fixed;
   opacity: 0;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgb(0,0,0 .5);
+  background-color: rgb(0, 0, 0 0.5);
   pointer-events: none;
+  width: 100%;
+  height: 100%;
 }
-#overlay.active{
+
+#overlay.active {
   opacity: 1;
   pointer-events: all;
-
 }
+
 .logo {
   display: flex;
   margin-top: 1.5rem;
